# 573in1

./: .editorconfig  .gitignore  .markdownlint.json  CMakeLists.txt  CMakePresets.json  README.md  cd.json  cdrom.json  resources.json  resourcestiny.json
.github/scripts/: buildRelease.sh
.github/workflows/: build.yml
assets/: about.txt  app.palette.json  app.strings.json  cdreadme.txt  licenses.txt
assets/lang/: en.json  it.json
assets/sounds/: about.vag  alert.vag  click.vag  convertSounds.sh  enter.vag  exit.vag  move.vag  move_left.vag  move_right.vag  moveleft.vag  moveright.vag  screenshot.vag  startup.vag
assets/textures/: font.json  font.metrics.json
cmake/: executable.ld  options.cmake  setup.cmake  toolchain.cmake  tools.cmake
data/: fpga.bit  gameinfo.json  games.json  x76f041.cartdb  x76f041.db  zs01.cartdb  zs01.db
data/dumps/unknown/: 894aa.u1
data/dumps/upgrade/: 881aa.u1
data/dumps/x76f041/: gc826jaa.u1  gc845jb.u1  gc865uab.u1  gc905ja.u1  gc947ja.u6  gca15ja.u1  gca18ja.u5  ge765jaa.u1  ge877jaa.u1  ge936ea.u1  gk936ea.u1  gn895ja.u1  gq881ka.7b  gq883ea.u1  gq886aa.u1  gq886ea.u1  gq886ua.u1  gq894ja.u1  gq918ea.u2  gx889aa.u1  gx889ja.u1
data/dumps/zs01/: gca23aa.u1  gca25ka.u1  gca26ay.u1  gca26jy.u1  gca34ja.u1  gca38ja.u1  gca38jb.u1  gcb05aa.u1  gcb05ka.u1  gcb16jy.u1  gcb17ja.u1  gcb20ja.u1  gcc07ay.u1  gcc07jy.u1  gcc08jz.u1  gcc36ja.u1  gcc38aa.u1  gcc39jb.u1  gcd09aa.u1  gcd09ja.u1  gcd10jb.u1  gcd39ab.u1  ge912aaa.u1  ge912jab.u1  gea25aa.u1  gea25az.u1  gea26jz.u1  geb47ja.u1  gka23ka.u1  gqa40ja.u1  gqa40jr.u1  gua33jb.u1
data/tests/: gca15.573  gca33.573  gca34-2.573  gca34.573  gcc36-mame.573  gk936-mame.573  gkc23.573  gqa40jab.573  gqa40jrb.573
doc/: faq.md  formats.md  fpga.md  index.md  manual.md
dumps/: 845aa.u1  874aa.u1  874ja.u1  874ka.u1  881ja.u1  883aa.u1  883ja.u1  883ka.u1  887aa.u1  894ja.u1  895ja.u1  a38jr.u1  a39ja.u1  gc811ja.u1  gc826ka.u1  gc826ua.u1  gc865ja.u1  gc908ja.u1  gc910ja.u1  gc910jc.u1  gc947ja.u1  gca07ja.u1  gca22ja.u1  gca26az.u1  gca26ja.u1  gca26jz.u1  gca33ab.u1  gca33ja.u1  gca33jb.u1  gca34jb.u1  gcb05ay.u1  gcb05az.u1  gcb05ja.u1  gcb05jy.u1  gcb06ja.u1  gcb06jz.u1  gcb16aa.u1  gcb16ay.u1  gcb16az.u1  gcb16ja.u1  (+56 more)
dumps/unknown/: 881ka.u1
dumps/x76f041/: gc826aa.u1  gc826ea.u1  gc905aa.u1  gc910jc.u4  ge885ja.u1  ge887aa.u1  gn845ea.u1  gq881ja.7b  gq883ja.u1  gq883ua.u1  gq886ja.u1  gq894aa.u1  gq918aa.u1  gq918ua.u1  gx706ja.u1  gx889ua.u1
dumps/zs01/: gca23ja.u1  gca26aa.u1  gca27ja.u1  gca33aa.u1  gca37ja.u1  gca39jr.u1  gcb05jz.u1  gcb06jy.u1  gcb17jy.u1  gcb17jz.u1  gcb19ja.u1  gcc07jb.u1  gcc08ja.u1  gcc08jb.u1  gcc23ea.u1  gcd09ab.u1  gcd10ja.u1  gcd39jb.u1  gcd40aa.u1  gea24ja.u1  gea25jy.u1  gea25jz.u1  gea26ja.u1  geb47jb.u1  gkb05ka.u1
fpga/: README.md  build.bat  build.sh  fpga.ucf  fpga.ys  runISE.bat
fpga/src/: main.v  spartanxl.v  techmap.v
fpga/src/main/: alu.v  defs.vh  dram.v  main.v  mp3.v  uart.v  util.v
fpga/src/primitives/: carry.v  io.v  logic.v  memory.v
fpga/src/spartanxl/: alu.v  compare.v  counter.v  io.v  map.v  memory.v  mux.v  primitives.lib  primitives.v  register.v
fpga/yosys/: cellmap.v  logic.lib  lutram.txt
schema/: cart.json  cartinfo.json  cdrom.json  gamedb.json  games.json  header.json  metrics.json  resources.json  rominfo.json
src/: asset.cpp  asset.hpp  cart.cpp  cart.hpp  cartdata.cpp  cartdata.hpp  cartdb.cpp  cartdb.hpp  cartio.cpp  cartio.hpp  defs.hpp  file.cpp  file.hpp  gpu.cpp  gpu.hpp  gpufont.cpp  gpufont.hpp  ide.cpp  ide.hpp  ideglue.cpp  io.cpp  io.hpp  main.cpp  pad.cpp  pad.hpp  rom.cpp  rom.hpp  spu.cpp  spu.hpp  uibase.cpp  uibase.hpp  uicommon.cpp  uicommon.hpp  util.cpp  util.hpp  utilerror.hpp  zs01.cpp  zs01.hpp
src/app/: actions.cpp  actions.hpp  app.cpp  app.hpp  appworkers.cpp  cartactions.cpp  cartactions.hpp  cartunlock.cpp  cartunlock.hpp  main.cpp  main.hpp  misc.cpp  misc.hpp  unlock.cpp  unlock.hpp
src/boot/: crt0.s  main.cpp
src/common/: args.cpp  args.hpp  bus.cpp  bus.hpp  defs.hpp  file.cpp  file.hpp  file9660.cpp  file9660.hpp  filefat.cpp  filefat.hpp  filemisc.cpp  filemisc.hpp  filezip.cpp  filezip.hpp  gpu.cpp  gpu.hpp  gpufont.cpp  gpufont.hpp  ide.cpp  ide.hpp  idedefs.hpp  ideglue.cpp  io.cpp  io.hpp  ioboard.cpp  ioboard.hpp  mdec.cpp  mdec.hpp  mdec.s  pad.cpp  pad.hpp  rom.cpp  rom.hpp  romdrivers.cpp  romdrivers.hpp  spu.cpp  spu.hpp  util.cpp  util.hpp
src/common/blkdev/: ata.cpp  ata.hpp  atapi.cpp  atapi.hpp  device.cpp  device.hpp  idebase.cpp  idebase.hpp  memorycard.cpp  memorycard.hpp  ps1cdrom.cpp  ps1cdrom.hpp
src/common/cart/: cart.cpp  cart.hpp  x76.cpp  x76.hpp  zs01.cpp  zs01.hpp
src/common/exthw/: lcd.cpp  lcd.hpp  nfc.cpp  nfc.hpp
src/common/file/: fat.cpp  fat.hpp  file.cpp  file.hpp  iso9660.cpp  iso9660.hpp  misc.cpp  misc.hpp  zip.cpp  zip.hpp
src/common/fs/: fat.cpp  fat.hpp  file.cpp  file.hpp  host.cpp  host.hpp  iso9660.cpp  iso9660.hpp  memorycard.cpp  memorycard.hpp  memorycardbase.cpp  memorycardbase.hpp  memorycardfs.cpp  memorycardfs.hpp  misc.cpp  misc.hpp  package.cpp  package.hpp  vfs.cpp  vfs.hpp  zip.cpp  zip.hpp
src/common/nvram/: bios.cpp  bios.hpp  flash.cpp  flash.hpp  flashdetect.cpp  flashdetect.hpp  (+2 more)
src/launcher/: exchandler.s  launcher.cpp  launcher.hpp  main.cpp
src/libc/: crt0.c  setjmp.h
src/main/: cart.cpp  cart.hpp  cartdata.cpp  cartdata.hpp  cartio.cpp  cartio.hpp  formats.cpp  formats.hpp  main.cpp  uibase.cpp  uibase.hpp  uicommon.cpp  uicommon.hpp  uimodals.cpp  uimodals.hpp  zs01.cpp  zs01.hpp
src/ps1/: gpucmd.h  pcdrv.h  pcdrv.s  registers.h  registers573.h  system.c  system.h  system.s  unhandledexc.c
tools/: _common.py  analyzeGameDumps.py  buildCDImage.py  buildCartDB.py  buildFlashDB.py  buildResourceArchive.py  buildResourcePackage.py  convertExecutable.py  convertNVRAMDumps.py  decodeCartDump.py  decodeDump.py  requirements.txt  splitFlashDump.py
tools/common/: __init__.py  analysis.py  assets.py  cart.py  cartdata.py  cartparser.py  decompile.py  gamedb.py  games.py  mips.py  util.py
(+76 files in other folders)
